// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`request tests bad request unchecked 1`] = `
[
  [
    "https://fake-server.com/path",
    {
      "headers": {},
      "method": "GET",
    },
  ],
]
`;

exports[`request tests basic bad request 2`] = `
[
  [
    "https://fake-server.com/path",
    {
      "headers": {},
      "method": "GET",
    },
  ],
]
`;

exports[`request tests basic ok 1`] = `
[
  [
    "https://fake-server.com/path",
    {
      "headers": {},
      "method": "GET",
    },
  ],
]
`;

exports[`request tests basic ok 120 requests 1`] = `
"req-01 GET https://fake-server.com/path 200 OK (88ms)
req-02 GET https://fake-server.com/path 200 OK (88ms)
req-03 GET https://fake-server.com/path 200 OK (88ms)
req-04 GET https://fake-server.com/path 200 OK (88ms)
req-05 GET https://fake-server.com/path 200 OK (88ms)
req-06 GET https://fake-server.com/path 200 OK (88ms)
req-07 GET https://fake-server.com/path 200 OK (88ms)
req-08 GET https://fake-server.com/path 200 OK (88ms)
req-09 GET https://fake-server.com/path 200 OK (88ms)
req-10 GET https://fake-server.com/path 200 OK (88ms)
req-11 GET https://fake-server.com/path 200 OK (88ms)
req-12 GET https://fake-server.com/path 200 OK (88ms)
req-13 GET https://fake-server.com/path 200 OK (88ms)
req-14 GET https://fake-server.com/path 200 OK (88ms)
req-15 GET https://fake-server.com/path 200 OK (88ms)
req-16 GET https://fake-server.com/path 200 OK (88ms)
req-17 GET https://fake-server.com/path 200 OK (88ms)
req-18 GET https://fake-server.com/path 200 OK (88ms)
req-19 GET https://fake-server.com/path 200 OK (88ms)
req-20 GET https://fake-server.com/path 200 OK (88ms)
req-21 GET https://fake-server.com/path 200 OK (88ms)
req-22 GET https://fake-server.com/path 200 OK (88ms)
req-23 GET https://fake-server.com/path 200 OK (88ms)
req-24 GET https://fake-server.com/path 200 OK (88ms)
req-25 GET https://fake-server.com/path 200 OK (88ms)
req-26 GET https://fake-server.com/path 200 OK (88ms)
req-27 GET https://fake-server.com/path 200 OK (88ms)
req-28 GET https://fake-server.com/path 200 OK (88ms)
req-29 GET https://fake-server.com/path 200 OK (88ms)
req-30 GET https://fake-server.com/path 200 OK (88ms)
req-31 GET https://fake-server.com/path 200 OK (88ms)
req-32 GET https://fake-server.com/path 200 OK (88ms)
req-33 GET https://fake-server.com/path 200 OK (88ms)
req-34 GET https://fake-server.com/path 200 OK (88ms)
req-35 GET https://fake-server.com/path 200 OK (88ms)
req-36 GET https://fake-server.com/path 200 OK (88ms)
req-37 GET https://fake-server.com/path 200 OK (88ms)
req-38 GET https://fake-server.com/path 200 OK (88ms)
req-39 GET https://fake-server.com/path 200 OK (88ms)
req-40 GET https://fake-server.com/path 200 OK (88ms)
req-41 GET https://fake-server.com/path 200 OK (88ms)
req-42 GET https://fake-server.com/path 200 OK (88ms)
req-43 GET https://fake-server.com/path 200 OK (88ms)
req-44 GET https://fake-server.com/path 200 OK (88ms)
req-45 GET https://fake-server.com/path 200 OK (88ms)
req-46 GET https://fake-server.com/path 200 OK (88ms)
req-47 GET https://fake-server.com/path 200 OK (88ms)
req-48 GET https://fake-server.com/path 200 OK (88ms)
req-49 GET https://fake-server.com/path 200 OK (88ms)
req-50 GET https://fake-server.com/path 200 OK (88ms)
req-51 GET https://fake-server.com/path 200 OK (88ms)
req-52 GET https://fake-server.com/path 200 OK (88ms)
req-53 GET https://fake-server.com/path 200 OK (88ms)
req-54 GET https://fake-server.com/path 200 OK (88ms)
req-55 GET https://fake-server.com/path 200 OK (88ms)
req-56 GET https://fake-server.com/path 200 OK (88ms)
req-57 GET https://fake-server.com/path 200 OK (88ms)
req-58 GET https://fake-server.com/path 200 OK (88ms)
req-59 GET https://fake-server.com/path 200 OK (88ms)
req-60 GET https://fake-server.com/path 200 OK (88ms)
req-61 GET https://fake-server.com/path 200 OK (88ms)
req-62 GET https://fake-server.com/path 200 OK (88ms)
req-63 GET https://fake-server.com/path 200 OK (88ms)
req-64 GET https://fake-server.com/path 200 OK (88ms)
req-65 GET https://fake-server.com/path 200 OK (88ms)
req-66 GET https://fake-server.com/path 200 OK (88ms)
req-67 GET https://fake-server.com/path 200 OK (88ms)
req-68 GET https://fake-server.com/path 200 OK (88ms)
req-69 GET https://fake-server.com/path 200 OK (88ms)
req-70 GET https://fake-server.com/path 200 OK (88ms)
req-71 GET https://fake-server.com/path 200 OK (88ms)
req-72 GET https://fake-server.com/path 200 OK (88ms)
req-73 GET https://fake-server.com/path 200 OK (88ms)
req-74 GET https://fake-server.com/path 200 OK (88ms)
req-75 GET https://fake-server.com/path 200 OK (88ms)
req-76 GET https://fake-server.com/path 200 OK (88ms)
req-77 GET https://fake-server.com/path 200 OK (88ms)
req-78 GET https://fake-server.com/path 200 OK (88ms)
req-79 GET https://fake-server.com/path 200 OK (88ms)
req-80 GET https://fake-server.com/path 200 OK (88ms)
req-81 GET https://fake-server.com/path 200 OK (88ms)
req-82 GET https://fake-server.com/path 200 OK (88ms)
req-83 GET https://fake-server.com/path 200 OK (88ms)
req-84 GET https://fake-server.com/path 200 OK (88ms)
req-85 GET https://fake-server.com/path 200 OK (88ms)
req-86 GET https://fake-server.com/path 200 OK (88ms)
req-87 GET https://fake-server.com/path 200 OK (88ms)
req-88 GET https://fake-server.com/path 200 OK (88ms)
req-89 GET https://fake-server.com/path 200 OK (88ms)
req-90 GET https://fake-server.com/path 200 OK (88ms)
req-91 GET https://fake-server.com/path 200 OK (88ms)
req-92 GET https://fake-server.com/path 200 OK (88ms)
req-93 GET https://fake-server.com/path 200 OK (88ms)
req-94 GET https://fake-server.com/path 200 OK (88ms)
req-95 GET https://fake-server.com/path 200 OK (88ms)
req-96 GET https://fake-server.com/path 200 OK (88ms)
req-97 GET https://fake-server.com/path 200 OK (88ms)
req-98 GET https://fake-server.com/path 200 OK (88ms)
req-99 GET https://fake-server.com/path 200 OK (88ms)
req-100 GET https://fake-server.com/path 200 OK (88ms)
req-101 GET https://fake-server.com/path 200 OK (88ms)
req-102 GET https://fake-server.com/path 200 OK (88ms)
req-103 GET https://fake-server.com/path 200 OK (88ms)
req-104 GET https://fake-server.com/path 200 OK (88ms)
req-105 GET https://fake-server.com/path 200 OK (88ms)
req-106 GET https://fake-server.com/path 200 OK (88ms)
req-107 GET https://fake-server.com/path 200 OK (88ms)
req-108 GET https://fake-server.com/path 200 OK (88ms)
req-109 GET https://fake-server.com/path 200 OK (88ms)
req-110 GET https://fake-server.com/path 200 OK (88ms)
req-111 GET https://fake-server.com/path 200 OK (88ms)
req-112 GET https://fake-server.com/path 200 OK (88ms)
req-113 GET https://fake-server.com/path 200 OK (88ms)
req-114 GET https://fake-server.com/path 200 OK (88ms)
req-115 GET https://fake-server.com/path 200 OK (88ms)
req-116 GET https://fake-server.com/path 200 OK (88ms)
req-117 GET https://fake-server.com/path 200 OK (88ms)
req-118 GET https://fake-server.com/path 200 OK (88ms)
req-119 GET https://fake-server.com/path 200 OK (88ms)
req-120 GET https://fake-server.com/path 200 OK (88ms)"
`;

exports[`request tests ok with basic auth 1`] = `
[
  [
    "https://fake-server.com/path",
    {
      "headers": {
        "Authorization": "Basic dXNlcm5hbWU6dGVzdC1wYXNzd29yZA==",
      },
      "method": "GET",
    },
  ],
]
`;

exports[`request tests ok with bearer auth 1`] = `
[
  [
    "https://fake-server.com/path",
    {
      "headers": {
        "Authorization": "Bearer test-token",
      },
      "method": "GET",
    },
  ],
]
`;

exports[`request tests ok with lots of options 1`] = `
[
  [
    "https://server/path?hello=world&foo=bar#hashed",
    {
      "headers": {},
      "method": "GET",
      "redirect": true,
    },
  ],
]
`;

exports[`request tests ok with no logging 1`] = `
[
  [
    "https://fake-server.com/path",
    {
      "headers": {},
      "method": "GET",
    },
  ],
]
`;
